# packages/contracts/openapi.json
@@ -370,6 +370,12 @@
           "editor": {
             "$ref": "#/components/schemas/EditorIn"
           },
+          "profileId": {
+            "default": "",
+            "maxLength": 40,
+            "title": "Profileid",
+            "type": "string"
+          },
           "protocolVersion": {
             "default": "1.0",
             "title": "Protocolversion",
